--- a/index.html
+++ b/index.html
@@ -18,43 +18,89 @@
             <div class="togglebtn" style="height:'40px'; width:'40px';">
                 <i class="fa-solid fa-bars"></i>
             </div>
+
             <div class="bodylogo">
-                <!-- <img src="/image/YTlogo.avif" alt="YouTube Logo" height="30" width="30"> -->
-                 <i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+                <img src="/image/YouTube-Logo.png" alt="Profile Picture" class="profilepic" style="height: 60px; width: 80px; border-radius: 50%;">
             </div>
         </div>
 
         <div class="ssecond">
             <div class="searchbar">
+                <div class="searchbox">
+                    <input type="text" placeholder="Search" class="searchinput">
 
+                    <button class="searchbtn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
             </div>
-            <div class="voicelogo">
 
+            <div class="voicelogo">
+                <i class="fa-solid fa-microphone"></i>
             </div>
         </div>
 
         <div class="sthird">
             <div class="createbtn">
-
+                <i class="fa-solid fa-plus"></i>
+                <span class="Createtxt">Create</span>
             </div>
             <div class="notificationbtn">
-
+                <i class="fa-solid fa-bell"></i>
             </div>
-            <div class="profile">
 
+            <div class="profile">
+                <img src="/image/profile.jpg" alt="Profile Picture" class="profilepic" style="height: 30px; width: 30px; border-radius: 50%;">
             </div>
         </div>
     </header>
 
     <main>
         <div class="leftlist">
+            <table>
+                <tr>
+                    <td>
+                        <i class="fa-solid fa-house"></i>Home
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <i class="fa-solid fa-clapperboard" style="color: #ff0000;"></i> Shorts
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <i class="fa-solid fa-bell" style="color: #ff0000;"></i> Subscriptions
+
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    <i class="fa-solid fa-user-circle" style="color: #555;"></i> Profile
+
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    <i class="fa-solid fa-download" style="color: #ff0000;"></i> Download
+
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="middlepart">
+            <div class="upperheadlist">
 
         </div>
-        <div class="upperheadlist">
 
-        </div>
         <div class="videocard"></div>
+        </div>
     </main>
 </body>
+
+
+<input type="color" id="colorPicker" value="#ff0000" >
 
 </html>
