--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="sfirst">
-            <div class="togglebtn" style="height:'40px'; width:'40px';">
+            <div class="togglebtn"">
                 <i class="fa-solid fa-bars"></i>
             </div>
 
@@ -45,6 +45,7 @@
                 <i class="fa-solid fa-plus"></i>
                 <span class="Createtxt">Create</span>
             </div>
+
             <div class="notificationbtn">
                 <i class="fa-solid fa-bell"></i>
             </div>
@@ -60,31 +61,45 @@
             <table>
                 <tr>
                     <td>
-                        <i class="fa-solid fa-house"></i>Home
+                        <i class="fa-solid fa-house"></i>
+                        <span class="sidetxt">
+                            Home
+                        </span>
                     </td>
                 </tr>
 
                 <tr>
                     <td>
-                        <i class="fa-solid fa-clapperboard" style="color: #ff0000;"></i> Shorts
+                        <i class="fa-solid fa-clapperboard" style="color: #ff0000;"></i>
+                        <span class="sidetxt">
+                            Shorts
+                        </span>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <i class="fa-solid fa-bell" style="color: #ff0000;"></i> Subscriptions
-
+                        <i class="fa-solid fa-bell" style="color: #ff0000;"></i>
+                        <span class="sidetxt">
+                            Subscriptions
+                        </span>
                     </td>
                 </tr>
+
                 <tr>
                     <td>
-                    <i class="fa-solid fa-user-circle" style="color: #555;"></i> Profile
-
+                        <i class="fa-solid fa-user-circle" style="color: #555;"></i>
+                        <span class="sidetxt">
+                            Library
+                        </span>
                     </td>
                 </tr>
+
                 <tr>
                     <td>
-                    <i class="fa-solid fa-download" style="color: #ff0000;"></i> Download
-
+                        <i class="fa-solid fa-download" style="color: #ff0000;"></i>
+                        <span class="sidetxt">
+                            Downloads
+                        </span>
                     </td>
                 </tr>
             </table>
@@ -92,15 +107,53 @@
 
         <div class="middlepart">
             <div class="upperheadlist">
+                <span class="fisrtlist">
+                    All
+                </span>
+                <span class="uppertxtlist">
+                    Music
+                </span>
+                <span class="uppertxtlist">
+                    Sports
+                </span>
+                <span class="uppertxtlist">
+                    Gaming
+                </span>
+                <span class="uppertxtlist">
+                    News
+                </span>
+                <span class="uppertxtlist">
+                    Movies
+                </span>
+                <span class="uppertxtlist">
+                    Live
+                </span>
+                <span class="uppertxtlist">
+                    Fashion & Beauty
+                </span>
+                <span class="uppertxtlist">
+                    Learning
+                </span>
+                <span class="uppertxtlist">
+                    Spotlight
+                </span>
+                <span class="uppertxtlist">
+                    Trending
+                </span>
+                <span class="uppertxtlist">
+                    Shopping
+                </span>
+                <span class="morelist">
+                    >
+                </span>
 
-        </div>
+            </div>
 
-        <div class="videocard"></div>
+            <div class="videocard">
+                
+            </div>
         </div>
     </main>
 </body>
-
-
-<input type="color" id="colorPicker" value="#ff0000" >
 
 </html>
