--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="sfirst">
-            <div class="togglebtn"">
+            <div class="togglebtn">
                 <i class="fa-solid fa-bars"></i>
             </div>
 
